eusurvey-ingress.yaml
###################################################
###             IngressRoute HTTP               ###
###################################################
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: eusurvey-test
  labels:
     traefik-instance: both
     traefik-labelselector: "true"
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`eusurvey.test.unnoba.edu.ar`)
    middlewares:
    - name: default-https
      namespace: traefik
    services:
    - name: survey
      port: 8080

---

###################################################
###    IngressRoute SSL - HTTPS - AddPrefix     ###
###################################################
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: eusurvey-context-test-ssl
  labels:
     traefik-instance: both
     traefik-labelselector: "true"
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`eusurvey.test.unnoba.edu.ar`)
    middlewares:
    - name: eusurvey-add-eusurvey
    services:
    - name: survey
      port: 8080
  tls:
    secretName: unnoba-tls-test


---

###################################################
###          IngressRoute SSL - HTTPS           ###
###################################################
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: eusurvey-test-ssl
  labels:
     traefik-instance: both
     traefik-labelselector: "true"
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule       
    match: Host(`eusurvey.test.unnoba.edu.ar`) && PathPrefix(`/eusurvey`)
    services:
    - name: survey
      port: 8080
  tls:
    secretName: unnoba-tls-test

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  labels:
    traefik-instance: both
  name: eusurvey-add-eusurvey
spec:
  redirectRegex:
    regex: ^https://(.*).unnoba.edu.ar/(.*)
    replacement: https://${1}.unnoba.edu.ar/eusurvey/${2}
    permanent: true
